fixed overflow for activities, fixed attribute name bug

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -175,6 +175,11 @@ html, body {
 	height: 100%;
 }
 
+#div-activity-conf {
+	height: calc(100% - 41px) !important;
+	overflow: auto;
+}
+
 
 
 /*===============================================================
